--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,5 +1,10 @@
 <header>
   <div class="container header-inner">
+
+    <a href="/" class="mobile-logo">
+      <img src="/images/logo.png" alt="Benaja Logos" />
+    </a>
+
     <nav>
       <a href="/">| Home |</a>
       <a href="/kennismaking">Kennismaking |</a>
@@ -8,5 +13,6 @@
       <a href="/auteursrecht">Auteursrecht |</a>
       <a href="/contact">Contact |</a>
     </nav>
+
   </div>
 </header>
