--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,18 +1,18 @@
 <header>
   <div class="container header-inner">
 
-    <a href="/" class="mobile-logo">
-      <img src="/images/logo.png" alt="Benaja Logos" />
-    </a>
-
     <nav>
-      <a href="/">| Home |</a>
-      <a href="/kennismaking">Kennismaking |</a>
-      <a href="/boeken">Boeken |</a>
-      <a href="/downloads">Downloads |</a>
-      <a href="/auteursrecht">Auteursrecht |</a>
-      <a href="/contact">Contact |</a>
-    </nav>
+  <a href="/" class="mobile-logo">
+    <img src="/images/logo.png" alt="Benaja Logos" />
+  </a>
+
+  <a href="/">Home |</a>
+  <a href="/kennismaking">Kennismaking |</a>
+  <a href="/boeken">Boeken |</a>
+  <a href="/downloads">Downloads |</a>
+  <a href="/auteursrecht">Auteursrecht |</a>
+  <a href="/contact">Contact |</a>
+</nav>
 
   </div>
 </header>
