Use boom.svg as mobile logo

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -3,7 +3,7 @@
 
     <nav>
   <a href="/" class="mobile-logo">
-    <img src="/images/logo.png" alt="Benaja Logos" />
+    <img src="/images/boom.svg" alt="Benaja Logos" />
   </a>
 
   <a href="/">Home |</a>
