--- a/src/pages/downloads/index.astro
+++ b/src/pages/downloads/index.astro
@@ -52,7 +52,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
     </li>
 
    <li>
-      <span>Volledige boek = € 30</span>
+      <span>Compleet boek voor € 30</span>
 
        <button
         id="buy-een-reis"
@@ -130,7 +130,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 </li>
 
 <li>
-  <span>Volledige boek = €30</span>
+  <span>Compleet boek voor €30</span>
   <a href="https://buy.stripe.com/4gM00bcGKfBif2kaZ4enS0" target="_blank">
     <span class="badge paid">Koop nu</span>
   </a>
