--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Header from "@components/header.astro";
 import Footer from "@components/footer.astro";
-import { Analytics } from "@vercel/analytics/astro";
+import Analytics from '@vercel/analytics/astro'
 
 const { title = "Benaja Logos" } = Astro.props;
 ---
